header title changed

--- a/ccproject/knowledgekeep/templates/includes/header.html
+++ b/ccproject/knowledgekeep/templates/includes/header.html
@@ -9,7 +9,7 @@
 >
   <head>
     <meta charset="utf-8" />
-    <title>Knowledge Keep new</title>
+    <title>Knowledge Keep</title>
     <meta
       content="Writing X is our blog Webflow Template created for modern blogs looking to offer memberships for their new website."
       name="description"
