Creation of login and signup pages done

--- a/ccproject/knowledgekeep/templates/includes/navbar.html
+++ b/ccproject/knowledgekeep/templates/includes/navbar.html
@@ -363,7 +363,7 @@
                   <div class="inner-container">
                     <div class="w-layout-grid grid-1-column">
                       <a
-                        href="/log-in"
+                        href="/login"
                         class="nav-link categories-link-wrapper w-inline-block"
                         ><div class="mg-right-6px">
                           <img
