--- a/ccproject/knowledgekeep/templates/includes/footer.html
+++ b/ccproject/knowledgekeep/templates/includes/footer.html
@@ -1,6 +1,6 @@
     <footer class="footer-wrapper">
         <div class="container-default w-container">
-        <div class="footer-top">
+        {% comment %} <div class="footer-top">
             <div class="menu-main-wrapper-v1">
             <div
                 id="w-node-d59b5440-1113-aec4-5df7-8e1b1b2e4599-91dd5701"
@@ -389,7 +389,7 @@
                 </div>
             </div>
             </div>
-        </div>
+        </div> {% endcomment %}
         <div
             data-w-id="d59b5440-1113-aec4-5df7-8e1b1b2e464d"
             class="footer-middle"
@@ -535,7 +535,7 @@
         </div>
         </div>
     </footer>
-    <div class="popup-wrapper">
+    {% comment %} <div class="popup-wrapper">
         <div
         data-w-id="092c637b-f56c-25f9-34c1-bb5721d7cead"
         class="close-pop-up popup-bg"
@@ -560,12 +560,12 @@
             class="inner-container popup-content"
         >
             <div class="mg-bottom-12px">
-            <div class="inner-container _306px _100-tablet">
-                <div class="display-3">
-                Subscribe to receive our daily
-                <span class="text-no-wrap">tech news</span>
+                <div class="inner-container _306px _100-tablet">
+                    <div class="display-3">
+                    Subscribe to receive our daily
+                    <span class="text-no-wrap">tech news</span>
+                    </div>
                 </div>
-            </div>
             </div>
             <div class="mg-bottom-32px">
             <div class="inner-container _466px">
@@ -652,8 +652,8 @@
             >
         </div>
         </div>
-    </div>
-    </div>
+        </div>
+    </div> {% endcomment %}
     <script
     src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=640b89353805ffecac6d519d"
     type="text/javascript"
