Registration working and assets added

--- a/ccproject/knowledgekeep/templates/includes/navbar.html
+++ b/ccproject/knowledgekeep/templates/includes/navbar.html
@@ -40,7 +40,7 @@
             <ul role="list" class="header-nav-menu-list">
               <li class="header-nav-list-item left">
                 <a
-                  href="/home/home-v1"
+                  href="/"
                   aria-current="page"
                   class="header-nav-link w-nav-link w--current"
                   >Home</a
