--- a/ccproject/knowledgekeep/templates/mainfiles/signup.html
+++ b/ccproject/knowledgekeep/templates/mainfiles/signup.html
@@ -106,7 +106,7 @@
                       id="wf-sign-up-email"
                       placeholder="Enter your email address"
                       maxlength="256"
-                      name="Email"
+                      name="email"
                       data-w-id="63fd6d75f913922d4104e35300000000001c"
                       class="input w-input"
                       autocomplete="email"
