Login module added and the logo is added

--- a/ccproject/knowledgekeep/templates/includes/footer.html
+++ b/ccproject/knowledgekeep/templates/includes/footer.html
@@ -498,17 +498,14 @@
                 href="/"
                 class="footer-logo-wrapper mg-bottom-0 w-inline-block"
                 ><img
-                src="https://assets.website-files.com/640b89353805ffecac6d519d/640b89353805ff56d76d538d_logo-web-writing-x-webflow-template.svg"
+                src="https://raw.githubusercontent.com/JAChesney/django-website-knowledgekeep/main/ccproject/knowledgekeep/templates/assets/Minimalist_Simple_Brand_Initial_Logo-removebg-preview.svg"
                 alt="Logo - Writing X Webflow Template"
                 class="footer-logo"
             /></a>
             <p class="mg-bottom-0">
-                Copyright © Writing X | Designed by
-                <a href="https://brixtemplates.com/" target="_blank"
-                >BRIX Templates</a
-                >
-                - Powered by
-                <a href="https://webflow.com/" target="_blank">Webflow</a>
+                Copyright © KnowledgeKeep | Designed by
+                <a href="https://brixtemplates.com/" target="_blank">
+                Group 3</a>
             </p>
             <div
                 id="w-node-_9ad8af1a-0f98-e3cc-488a-1865a7f813e8-91dd5701"
