--- a/ccproject/knowledgekeep/templates/mainfiles/home.html
+++ b/ccproject/knowledgekeep/templates/mainfiles/home.html
@@ -1435,7 +1435,7 @@
                     <div class="mg-bottom-12px">
                         <a href="/" class="header-logo-link w-inline-block"
                         ><img
-                            src="https://assets.website-files.com/640b89353805ffecac6d519d/640b89353805ff56d76d538d_logo-web-writing-x-webflow-template.svg"
+                            src="https://raw.githubusercontent.com/JAChesney/django-website-knowledgekeep/main/ccproject/knowledgekeep/templates/assets/Minimalist_Simple_Brand_Initial_Logo-removebg-preview.svg"
                             alt="Logo - Writing X Webflow Template"
                             class="header-logo"
                         /></a>
