--- a/ccproject/knowledgekeep/templates/includes/header.html
+++ b/ccproject/knowledgekeep/templates/includes/header.html
@@ -81,4 +81,10 @@
     />
   </head>
   <body>
+    <style>
+      .w-webflow-badge {
+        display: None !important;
+        visbility: hidden !important;
+      }
+    </style>
     <div class="page-wrapper">
