--- a/ccproject/knowledgekeep/templates/mainfiles/signup.html
+++ b/ccproject/knowledgekeep/templates/mainfiles/signup.html
@@ -85,7 +85,7 @@
                     <label for="wf-sign-up-name">Username</label
                     ><input
                       type="text"
-                      placeholder="Enter your name"
+                      placeholder="Enter your username (Eg. Jack316)"
                       class="input w-input"
                       maxlength="256"
                       name="username"
