--- a/ccproject/knowledgekeep/templates/includes/footer.html
+++ b/ccproject/knowledgekeep/templates/includes/footer.html
@@ -523,7 +523,7 @@
                 href="https://twitter.com/"
                 target="_blank"
                 class="social-icon-square size-30px w-inline-block"
-                ><div class="social-icon-font"></div></a
+                ><div class="social-icon-font">&#x1D54F;</div></a
                 ><a
                 href="https://www.instagram.com/"
                 target="_blank"
