--- a/ccproject/knowledgekeep/templates/includes/footer.html
+++ b/ccproject/knowledgekeep/templates/includes/footer.html
@@ -396,7 +396,7 @@
         >
             <div>
             <img
-                src="https://raw.githubusercontent.com/JAChesney/django-website-knowledgekeep/main/ccproject/knowledgekeep/templates/assets/knowlegekeeplogo.svg"
+                src="https://assets.website-files.com/640b89353805ffecac6d519d/640b89353805ff2e6b6d5398_space-728-x-90-px-writing-x-webflow-template.svg"
                 loading="eager"
                 alt="Space Image - Writing X Webflow Template"
             />
@@ -501,7 +501,7 @@
                 href="/"
                 class="footer-logo-wrapper mg-bottom-0 w-inline-block"
                 ><img
-                src="https://github.com/JAChesney/django-website-knowledgekeep/blob/main/ccproject/knowledgekeep/templates/assets/knowlegekeeplogo.svg"
+                src="https://raw.githubusercontent.com/JAChesney/django-website-knowledgekeep/main/ccproject/knowledgekeep/templates/assets/knowlegekeeplogo.svg"
                 alt="Logo - Writing X Webflow Template"
                 class="footer-logo"
             /></a>
