--- a/ccproject/knowledgekeep/templates/mainfiles/home.html
+++ b/ccproject/knowledgekeep/templates/mainfiles/home.html
@@ -1435,7 +1435,7 @@
                     <div class="mg-bottom-12px">
                         <a href="/" class="header-logo-link w-inline-block"
                         ><img
-                            src="https://raw.githubusercontent.com/JAChesney/django-website-knowledgekeep/main/ccproject/knowledgekeep/templates/assets/Minimalist_Simple_Brand_Initial_Logo-removebg-preview.svg"
+                            src="https://raw.githubusercontent.com/JAChesney/django-website-knowledgekeep/main/ccproject/knowledgekeep/templates/assets/knowlegekeeplogo.svg"
                             alt="Logo - Writing X Webflow Template"
                             class="header-logo"
                         /></a>
@@ -1499,11 +1499,11 @@
                                     ><div class="mg-right-6px">
                                     <img
                                         loading="eager"
-                                        alt="Business"
+                                        alt="Environmental Science"
                                         src="https://assets.website-files.com/640b89353805ff39126d51c7/640b89353805ff9ad76d5229_business-icon-image-writing-x-webflow-template.svg"
                                     />
                                     </div>
-                                    <div>Business</div></a
+                                    <div>Environmental Science</div></a
                                 >
                                 </div>
                                 <div
