minor changes with logo, I guess

--- a/ccproject/knowledgekeep/templates/includes/navbar.html
+++ b/ccproject/knowledgekeep/templates/includes/navbar.html
@@ -260,10 +260,10 @@
                     <div class="line-rounded-icon dropdown-arrow"></div>
                   </div>
                   <nav class="dropdown-column-wrapper w-dropdown-list">
-                    <div class="card dropdown-pd categories">
+                    <div class="card dropdown-pd categories" style="width: 272px">
                       <div class="menu-wrapper">
                         <div class="inner-container">
-                          <div class="w-layout-grid grid-1-column gap-row-20px">
+                          <div class="w-layout-grid grid-1-column gap-row-10px">
                             <a
                               href="https://writingtemplate.webflow.io/blog-category/business"
                               class="nav-link categories-link-wrapper w-inline-block"
@@ -274,7 +274,7 @@
                                   class="image-size _18px"
                                 />
                               </div>
-                              <div>Business</div></a
+                              <div>Finance & Economics</div></a
                             ><a
                               href="https://writingtemplate.webflow.io/blog-category/design"
                               class="nav-link categories-link-wrapper w-inline-block"
@@ -285,7 +285,7 @@
                                   class="image-size _18px"
                                 />
                               </div>
-                              <div>Design</div></a
+                              <div>Mathematics & Statistics</div></a
                             ><a
                               href="https://writingtemplate.webflow.io/blog-category/marketing"
                               class="nav-link categories-link-wrapper w-inline-block"
@@ -296,7 +296,7 @@
                                   class="image-size _18px"
                                 />
                               </div>
-                              <div>Marketing</div></a
+                              <div>Environmental Science</div></a
                             ><a
                               href="https://writingtemplate.webflow.io/blog-category/development"
                               class="nav-link categories-link-wrapper w-inline-block"
@@ -307,7 +307,7 @@
                                   class="image-size _18px"
                                 />
                               </div>
-                              <div>Development</div></a
+                              <div>Computer Science</div></a
                             >
                           </div>
                         </div>
