--- a/ccproject/knowledgekeep/templates/mainfiles/home.html
+++ b/ccproject/knowledgekeep/templates/mainfiles/home.html
@@ -209,7 +209,7 @@
                       <div>
                         <div class="details-wrapper mg-bottom-12px">
                           <div class="badge-secondary small light">
-                            Development
+                            Computer Science
                           </div>
                           <div class="text-100 medium">May 2, 2023</div>
                         </div>
@@ -329,23 +329,23 @@
             data-duration-out="100"
             class="tabs-categories w-tabs"
             >
-            <div class="tabs-links-category-buttons-container w-tab-menu">
+            <div class="tabs-links-category-buttons-container w-tab-menu" style="max-width: 620px">
                 <a
                 data-w-tab="Tab 1"
                 class="badge-secondary tab-category-badge w-inline-block w-tab-link w--current"
-                ><div>Business</div></a
+                ><div>Finance & Economics</div></a
                 ><a
                 data-w-tab="Tab 2"
                 class="badge-secondary tab-category-badge w-inline-block w-tab-link"
-                ><div>Design</div></a
+                ><div>Mathematics & Statistics</div></a
                 ><a
                 data-w-tab="Tab 3"
                 class="badge-secondary tab-category-badge w-inline-block w-tab-link"
-                ><div>Development</div></a
+                ><div>Computer Science</div></a
                 ><a
                 data-w-tab="Tab 4"
                 class="badge-secondary tab-category-badge w-inline-block w-tab-link"
-                ><div>Marketing</div></a
+                ><div>Environmental Science</div></a
                 >
             </div>
             <div class="width-100 w-tab-content">
@@ -1503,7 +1503,7 @@
                                         src="https://assets.website-files.com/640b89353805ff39126d51c7/640b89353805ff9ad76d5229_business-icon-image-writing-x-webflow-template.svg"
                                     />
                                     </div>
-                                    <div>Environmental Science</div></a
+                                    <div>Finance & Economics</div></a
                                 >
                                 </div>
                                 <div
@@ -1520,7 +1520,7 @@
                                         src="https://assets.website-files.com/640b89353805ff39126d51c7/640b89353805ff7e5a6d5249_desing-icon-image-writing-x-webflow-template.svg"
                                     />
                                     </div>
-                                    <div>Design</div></a
+                                    <div>Mathematics & Statistics</div></a
                                 >
                                 </div>
                                 <div
@@ -1537,7 +1537,7 @@
                                         src="https://assets.website-files.com/640b89353805ff39126d51c7/640b89353805ff0c456d5268_development-icon-image-writing-x-webflow-template.svg"
                                     />
                                     </div>
-                                    <div>Development</div></a
+                                    <div>Computer Science</div></a
                                 >
                                 </div>
                                 <div
@@ -1554,7 +1554,7 @@
                                         src="https://assets.website-files.com/640b89353805ff39126d51c7/640b89353805ffb1966d527e_marketing-icon-image-writing-x-webflow-template.svg"
                                     />
                                     </div>
-                                    <div>Marketing</div></a
+                                    <div>Environmental Science</div></a
                                 >
                                 </div>
                             </div>
