made changes to d database type, added CRUD papers

--- a/knowledgekeep/templates/mainfiles/addpaper.html
+++ b/knowledgekeep/templates/mainfiles/addpaper.html
@@ -125,8 +125,10 @@
                     id="paper-type"
                     name='paper-type'
                     class="input w-input">
-                        <option value="journal">Journal</option>
-                        <option value="article">Article</option>
+                        <option value="journal">Finacne & Economics</option>
+                        <option value="article">Mathematics & Statistics</option>
+                        <option value="article">Environmental Science</option>
+                        <option value="article">Computer Science</option>
                     </select>
                   </div>
                   <div>
