--- a/knowledgekeep/templates/mainfiles/addpaper.html
+++ b/knowledgekeep/templates/mainfiles/addpaper.html
@@ -125,10 +125,10 @@
                     id="paper-type"
                     name='paper-type'
                     class="input w-input">
-                        <option value="journal">Finacne & Economics</option>
-                        <option value="article">Mathematics & Statistics</option>
-                        <option value="article">Environmental Science</option>
-                        <option value="article">Computer Science</option>
+                        <option value="Finance & Economics">Finance & Economics</option>
+                        <option value="Mathematics & Statistics">Mathematics & Statistics</option>
+                        <option value="Environmental Science">Environmental Science</option>
+                        <option value="Computer Science">Computer Science</option>
                     </select>
                   </div>
                   <div>
@@ -156,6 +156,21 @@
                       required
                     />
                   </div>
+                  <div
+                  id="w-node-_01dc3a33-0585-3cd2-fa90-2cc346f37851-f56d51b4"
+                  class="text-area-wrapper"
+                >
+                <label for="short-paper-description">Short description</label>
+                  <textarea
+                    id="short-paper-description"
+                    name="short-paper-description"
+                    maxlength="100"
+                    data-name="Message"
+                    placeholder="Short description of your paper"
+                    class="text-area w-input"
+                    required
+                  ></textarea>
+                </div>
                 <div
                   id="w-node-_01dc3a33-0585-3cd2-fa90-2cc346f37851-f56d51b4"
                   class="text-area-wrapper"
