--- a/knowledgekeep/templates/includes/footer.html
+++ b/knowledgekeep/templates/includes/footer.html
@@ -501,7 +501,7 @@
                 href="/"
                 class="footer-logo-wrapper mg-bottom-0 w-inline-block"
                 ><img
-                src="https://raw.githubusercontent.com/JAChesney/django-website-knowledgekeep/main/ccproject/knowledgekeep/templates/assets/knowlegekeeplogo.svg"
+                src="https://raw.githubusercontent.com/JAChesney/django-website-knowledgekeep/main/knowledgekeep/templates/assets/knowlegekeeplogo.svg?sanitize=true"
                 alt="Logo - Writing X Webflow Template"
                 class="footer-logo"
             /></a>
@@ -664,5 +664,28 @@
     src="https://assets.website-files.com/640b89353805ffecac6d519d/js/webflow.9c4088d86.js"
     type="text/javascript"
     ></script>
+    <script>
+        // Get references to the modal and the buttons
+        var modal = document.getElementById("pdfModal");
+        var openModalButton = document.getElementById("openModal");
+        var closeModalButton = document.getElementById("closeModal");
+      
+        // Open the modal when the button is clicked
+        openModalButton.onclick = function() {
+          modal.style.display = "block";
+        }
+      
+        // Close the modal when the close button is clicked
+        closeModalButton.onclick = function() {
+          modal.style.display = "none";
+        }
+      
+        // Close the modal when clicking outside of the modal
+        window.onclick = function(event) {
+          if (event.target === modal) {
+            modal.style.display = "none";
+          }
+        }
+    </script>
     </body>
 </html>
