--- a/knowledgekeep/templates/includes/header.html
+++ b/knowledgekeep/templates/includes/header.html
@@ -47,12 +47,18 @@
       rel="stylesheet"
       type="text/css"
     />
+
+
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link
       href="https://fonts.gstatic.com"
       rel="preconnect"
       crossorigin="anonymous"
     />
+    <!-- Add Bootstrap CSS and JavaScript -->
+    {% comment %} <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> {% endcomment %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script
       src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"
       type="text/javascript"
@@ -70,6 +76,7 @@
             (n.className += t + "touch");
       })(window, document);
     </script>
+    
     <link
       href="https://assets.website-files.com/640b89353805ffecac6d519d/644851c2c39864e0e1c1fb51_favicon-writing-x-webflow-template.svg"
       rel="shortcut icon"
