--- a/knowledgekeep/templates/mainfiles/papers.html
+++ b/knowledgekeep/templates/mainfiles/papers.html
@@ -265,8 +265,8 @@
       </div>
       {% endcomment %}
       <div data-w-id="198be2eb-1ffa-7f69-2321-4c295df79385" class="flex-horizontal start">
-        <div class="heading-h5-size mg-right-32px">3 Columns</div>
-        <div class="divider divider-flex-sizing mg-74px"></div>
+        {% comment %} <div class="heading-h5-size mg-right-32px">3 Columns</div> {% endcomment %}
+        {% comment %} <div class="divider divider-flex-sizing mg-74px"></div> {% endcomment %}
       </div>
       <div class="mg-bottom-20px">
         <div
@@ -274,8 +274,9 @@
           <div
             role="list"
             class="grid-3-columns blog-grid---default w-dyn-items">
+            {% for paper in papers %}
             <div role="listitem" class="w-dyn-item">
-              <a data-w-id="97131d11-ad35-5adf-b3f3-931a68bcf826" href="/blog/the-best-pomodoro-app-to-increase-your-productivity" class="article-link article-v1 w-inline-block">
+              <a data-w-id="97131d11-ad35-5adf-b3f3-931a68bcf826" href="{% if request.user.has_subscribed or paper.user == request.user %} {% url 'description' paper.id %} {% else %} /access-denied {% endif %}" class="article-link article-v1 w-inline-block">
                 <div class="blog-card-image-wrapper article-v1-image">
                   <img
                     src="https://assets-global.website-files.com/640b89353805ff39126d51c7/640b89353805ff79f06d5492_increase-productivity-thumbnail-image-writing-x-webflow-template.jpg"
@@ -292,21 +293,21 @@
                 </div>
                 <div class="article-v1-content">
                   <div class="details-wrapper mg-bottom-12px">
-                    <div class="badge-secondary small light">Business</div>
+                    <div class="badge-secondary small light">{{ paper.type }}</div>
                     <div class="text-100 medium">May 2, 2023</div>
                   </div>
                   <div class="inner-container _350px---mbp">
                     <h3 class="article-title display-4 mg-bottom-12px">
-                      The best Pomodoro app to increase your productivity
+                      {{ paper.paper_name }}
                     </h3>
                   </div>
                   <p class="mg-bottom-0">
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit
-                    ridiculus mollis sem scelerisque purus platea.
+                    {{ paper.short_description }}
                   </p>
                 </div></a
               >
             </div>
+            {% endfor %}
             {% comment %} <div role="listitem" class="w-dyn-item">
               <a
                 data-w-id="97131d11-ad35-5adf-b3f3-931a68bcf826"
